--- a/style.css
+++ b/style.css
@@ -26,8 +26,40 @@ main ul {
 div {
     margin: 5px auto;
 }
+section img {
+    float: left;
+}
+section div {
+    width: calc(50% - 80px);
+    float: left;
+    padding-left: 30px;
+    margin-bottom: 30px;
+}
+h2 {
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+section p {
+    height: 300px;
+    overflow: auto;
+    font-size: 15px;
+    line-height: 24px;
+}
+button {
+    border: none;
+    padding: 10px 30px;
+    background: lightgray;
+    color: #000;
+    border-radius: 3px;
+    font-size: 18px;
+    margin-top: 5px;
+    transition: 350ms;
+    cursor: pointer;
+}
 
 footer{
+    clear: both;
     background-color: black;
     height: 75px;
 }
