--- a/style.css
+++ b/style.css
@@ -4,7 +4,26 @@ body{
 
 header{
     background-color: black;
-    height: 75px;
+    height: 80px;
+}
+nav {
+    width: 960px;
+    margin: 0px auto;
+}
+header img {
+    float: left;
+    margin-top: 10px;
+}
+
+header ul li {
+    display: inline-block;
+    margin-top: 35px;
+    margin-right: 75px;
+    margin-left: 60px;
+}
+a {
+    text-decoration: none;
+    color: lightgray;
 }
 
 main {
@@ -54,8 +73,11 @@ button {
     border-radius: 3px;
     font-size: 18px;
     margin-top: 5px;
-    transition: 350ms;
-    cursor: pointer;
+    transition: 450ms;
+}
+button:hover {
+    background-color: grey;
+    color: lightcyan;
 }
 
 footer{
